--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-ipykernel==6.7.0
-ipywidgets==7.6.5
-opencv-python==4.5.5.64
-matplotlib==3.5.1
-
-antspyx==0.3.1
-antspynet==0.1.5
-SimpleITK==2.1.1
+ipykernel
+ipywidgets
+matplotlib
+opencv-python
+jupyter
+notebook
+antspyx
+SimpleITK
+#antspynet
