#4 add docker & compose for portability on windows and easier setup on linux

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+uv
 ipykernel
 ipywidgets
 matplotlib
-opencv-python
+opencv-python-headless
 jupyter
 notebook
-antspyx
 SimpleITK
+antspyx
 antspynet
